--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1739,6 +1739,7 @@ ul.inner-menu-mobile {
     font-size: 21px;
     color: #444444;
     margin: inherit;
+    cursor: pointer;
   }
   .top-badge{
     position: absolute;
