--- a/src/containers/checkout/component/orderStyles.scss
+++ b/src/containers/checkout/component/orderStyles.scss
@@ -336,7 +336,7 @@
 
 .text-remove-items {
   font-size: 14px;
-  margin-top: 30px;
+  margin: 30px 10px;
   font-style: italic;
 
   .trigger-remove-items {
@@ -391,6 +391,10 @@
 
 @media (max-width: 992px) {
   .fix-ordersummary {
+    margin: 0 -6px;
+    max-width: calc(100% + 12px);
+    width: calc(100% + 12px);
+    
     .order-summary {
       padding-bottom: 52px;
     }
@@ -429,6 +433,10 @@
       .total{
         @include b4_12px_montserrat_semibold_charcoal();
         text-transform: uppercase;
+      }
+
+      .text-remove-items{
+        margin: 10px 0 0;
       }
     }
   }
