--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -11,14 +11,28 @@
     top: $header-top;
     z-index: 7;
     width: 100%;
-    background-color: #fff;
-    border-bottom: 1px solid #f5f5f5;
+    background-color: #F9F8F5;
     height: $header-checkout;
+    box-shadow: 0px 3px 6px #00000029;
+
+    &.footer{
+      top: unset;
+      bottom: 0;
+      box-shadow: 0px -3px 8px #00000029;
+    }
 }
 
 .logo-container {
     line-height: 49px;
-    text-align: center;
+    text-align: left;
+    padding-left: 35px; 
+  }
+
+  .footer-curr{
+    line-height: 49px;
+    text-align: left;
+    padding-left: 35px; 
+  @include b4_12px_montserrat_charcoal_caps();
   }
 
   @media (max-width: 992px) {
@@ -251,11 +265,7 @@
     font-family: $font-Lato;
   }
   .closed {
-    color: #b3b3b3;
-    letter-spacing: 1px;
-    font-weight: 900;
-    font-size: 14px;
-    font-family: $font-Lato;
+   @include b4_12px_montserrat_charcoal_caps();
   }
 }
 
@@ -265,11 +275,7 @@
 }
 
 .selected-stvalue {
-  color: gray;
-  font-size: 12px;
-  line-height: 18px;
-  letter-spacing: 0.5px;
-  font-family: $font-Lato;
+  @include b4_12px_montserrat_charcoal();
   overflow: hidden;
   text-overflow: ellipsis;
   // max-width: 40ch;
@@ -296,16 +302,26 @@
 
 .head-lineheight{
   font-size: 14px;
-  line-height: 48px;
+  line-height: 40px;
+  margin-top: 5px;
+  @include b4_12px_montserrat_charcoal();
 }
 .v-center {
   line-height: $header-checkout;
   color: #666;
   letter-spacing: 1px;
+  img {
+    width: 15px;
+    height: 19px;
+    object-fit: contain;
+    margin-right: 5px;
+    vertical-align: middle;
+    filter: invert(1) grayscale(9)
+  }
 }
 .lock {
   font-size: 26px;
-  position: absolute;
+  // position: absolute;
   top: 12px;
   left: -24px;
 }
@@ -397,6 +413,8 @@
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .input-container {
@@ -836,18 +854,30 @@ input[type="radio"] {
     color: #000000;
 }
 .curr {
+  text-align: center;
+  margin-top: 0;
+  line-height: 49px;
   text-align: right;
-  &:hover {
-    span {
-      cursor: pointer;
-      color: $cerise;
-    }
+  padding-right: 35px;
+  @include b4_12px_montserrat_charcoal();
+  .icon{
+    padding-right: 15px;
   }
-  span {    
-    &:first-child{
-      margin: 0 6px 0 0;
-    }
+  .mobile-num {
+    @include b4_12px_montserrat_charcoal();
+    text-decoration: none;
   }
+  // &:hover {
+  //   span {
+  //     cursor: pointer;
+  //     color: $cerise;
+  //   }
+  // }
+  // span {    
+  //   &:first-child{
+  //     margin: 0 6px 0 0;
+  //   }
+  // }
 }
 
 .disable-curr {
