--- a/src/containers/checkout/styles.scss
+++ b/src/containers/checkout/styles.scss
@@ -316,8 +316,8 @@
 }
 
 .card {
-  margin-left: 50px;
-  margin-right: 30px;
+  // margin-left: 50px;
+  // margin-right: 30px;
   background-color: #fff;
   padding-right: 50px;
   padding-left: 50px;
@@ -974,4 +974,13 @@ input[type="radio"] {
 .gst-desc {
   font-size: 11px;
   margin-bottom: 10px;
+}
+
+
+// Breadcrumb Styles
+.breadcrumb{
+  border-bottom: 1px solid #EAEAEA;
+}
+.breadcrumbWrapper{
+  padding:20px 0;
 }
