--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -52,6 +52,7 @@ $lightest-charcoal: #D8D8D8;
 // Secondary Palette
 $aqua: #7EAAA9;
 $aqua-bold: #548B8B;
+$aqua-semibold: #3C7979;
 $aqua-light: #D0E0E0;
 $cerise-light: #C6507F;
 $gold-light: #B59C77;
