--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -88,8 +88,8 @@ li {
   padding: 0px;
 }
 
-.padd-t-30{
-  padding-top: 30px !important;
+.padd-t-20{
+  padding-top: 20px !important;
 }
 
 a {
@@ -394,7 +394,10 @@ font-weight: bold;
     }
   }
 }
-
+.margin-l-r-40{
+  margin-left: 40px;
+  margin-right: 40px;
+}
 .voffset {
   margin-top: 2px;
 }
